Mon Dec 21 21:44:44 EST 1998 Mandrake <mandrake@mandrake.net>

	* esdlib.c - fixed some warnings.


1998-12-21  Yo Ric Dude  <ricdude@ix.netcom.com>

	* clients.c, esd-server.h, esd.h, players.c, proto.c, samples.c:
 	Cleaned out the protocol handling.  Basically, there's now a table
 	of protocol handlers and how much data they each require.  Each
 	client has a buffer to hold the extra data for the current
 	protocol handler.  poll_client_requests() reads data one chunk at
 	a time, until it gets everything it needs for that request.  The
 	handler then gets its data directly from the buffer, instead of
 	messing around with all this state transition stuff.
	* configure.in: setting bin_SCRIPTS to include esd-config should
 	set the execute flag on the script when installed.
	* esdlib.c: this needs esd.h, not esd-server.h.
	* mix.c, esd-server.h: debugging info update.

Sat Dec 19 21:19:51 EST 1998 Mandrake <mandrake@mandrake.net>
	* down to just 7 warnings compiling on my system now -- everything
	works pretty well now, I think, too.  still a few 8bit sound problems
	with samples, which I may look into later this weekend.

Sat Dec 19 14:02:41 EST 1998 Mandrake <mandrake@mandrake.net>
	* cleaned up warnings and a little bit of code here and there.
	(when you've got as many compiler warning flags turned on as I do
	this code was starting to look a bit horrendous compiling)  I'm
	not 100% done, but this is a good start.

Thu Dec 10 20:55:43 PST 1998 Manish Singh <yosh@gimp.org>

	* esd.c: use nanosleep if we have it, it seems to work better
	(at least for me)

Tue Dec  8 23:32:52 PST 1998 Manish Singh <yosh@gimp.org>

	* Makefile.am
	* configure.in
	* esd-config.in: correctly handle AUDIOFILE_* vars

	* Makefile.am
	* configure.in
	* esddsp.c: use dlsym instead of __func. Now works with glibc 2.1
	and FreeBSD (maybe others? testers wanted)

1998-12-08  Yo Ric Dude  <ricdude@ix.netcom.com>

	* acconfig.h, configure.in, esd-server.h: use autoconf to turn